[project]
name = "hr-analytics"
version = "0.1.0"
description = ""
authors = [
    {name = "diipdata",email = "diegop.freitas@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "notebook (>=7.4.0,<8.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "inflection (>=0.5.1,<0.6.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "missingno (>=0.5.2,<0.6.0)"
]

[tool.poetry]
packages = [{include = "hr_analytics", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
